Pagini acasa, meniu si comanda

--- a/src/main/resources/templates/meniu.html
+++ b/src/main/resources/templates/meniu.html
@@ -48,6 +48,29 @@
     </nav>
     <br/><br/><br/>
 
+    <ol class="list-group list-group-numbered">
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Ciorba</div>
+                ingrediente
+            </div>
+            <span class="badge bg-primary rounded-pill">10 lei</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Snitel</div>
+                Ingrediente
+            </div>
+            <span class="badge bg-primary rounded-pill">15 lei</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Cartofi prajiti</div>
+                Cartofi, ulei
+            </div>
+            <span class="badge bg-primary rounded-pill">5 lei</span>
+        </li>
+    </ol>
 
 
 <!-- Optional JavaScript; choose one of the two! -->
