Conexiune la baza de date(in application.properties trebuie trecute cateva setari), comanda functionala, pagina de meniu legata la bd.

--- a/src/main/resources/templates/comanda.html
+++ b/src/main/resources/templates/comanda.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!doctype html >
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,16 +51,21 @@
 <div class="container-md ">
     <div class="row justify-content-center">
         <div class="card col-md-6 mb-4">
-            <form>
+            <form th:action="@{/submitComanda}" method="post" th:object="${comanda}" >
                 <div class="form-floating mb-4 mt-4">
-                    <input type="number" class="form-control" id="cantitate" placeholder="Portii">
+                    <input type="number" class="form-control" id="cantitate" placeholder="Portii" th:field="${comanda.portii}">
                     <label for="cantitate">Portii</label>
                 </div>
                 <div class="form-floating mb-4">
-                    <select class="form-select">
-                        <option>optiune</option>
+                    <select  class="form-select" th:field="${comanda.id_mancare}">
+                        <option th:each="mancare : ${meniu}" th:text="${mancare.nume}" th:value="${mancare.id}"></option>
                     </select>
                 </div>
+
+                <div class="text-center mb-4">
+                    <button class="btn btn-primary" type="submit" >Submit</button>
+                </div>
+
 
             </form>
         </div>
