--- a/src/main/resources/templates/comanda.html
+++ b/src/main/resources/templates/comanda.html
@@ -42,6 +42,9 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div class="position-absolute bottom-0 start-0 mb-3 ms-3">
+                    <a th:href="@{/logout}" class="btn btn-warning">Logout</a>
+                </div>
             </div>
         </div>
     </div>
