--- a/src/main/resources/templates/meniu.html
+++ b/src/main/resources/templates/meniu.html
@@ -42,6 +42,9 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
+                    <div class="position-absolute bottom-0 start-0 mb-3 ms-3">
+                        <a th:href="@{/logout}" class="btn btn-warning">Logout</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,7 +55,7 @@
         <div class="col-md-4">
             <div class="card mb-3" th:each="mancare : ${meniu}">
                 <div class="card-body text-center">
-                    <img th:src="@{/imagini/{i}.jpg(i=${mancare.poza})}" class="card-img-top" alt="not found" >
+                    <img th:src="@{/imagini/{i}.jpg(i=${mancare.poza})}" class="card-img-top rounded shadow-sm" alt="not found" >
                     <div class="card-body">
                         <h5 class="card-title" th:text="${mancare.nume}"></h5>
                         <p class="card-text" th:text="${mancare.ingrediente}"></p>
