--- a/src/main/resources/templates/comanda.html
+++ b/src/main/resources/templates/comanda.html
@@ -71,11 +71,35 @@
 
 
             </form>
+
+            <div th:if="${reusit}"  id="divReusit"></div>
+
         </div>
     </div>
 </div>
 
+<div class="toast-container position-absolute bottom-0 end-0 p-3">
+    <div class="toast text-white bg-succes" role="alert" aria-live="assertive" aria-atomic="true" id="liveToast">
+        <div class="d-flex">
+            <div class="toast-body">
+                Produsul a fost adaugat cu succes!
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
 
+    </div>
+</div>
+
+<script>
+    window.onload = (event) => {
+        var divIf = document.getElementById('divReusit')
+        if (divIf != null){
+            var toastLiveExample = document.getElementById('liveToast')
+            var toast = new bootstrap.Toast(toastLiveExample)
+            toast.show()
+        }
+    }
+</script>
 
 
 <!-- Optional JavaScript; choose one of the two! -->
