--- a/src/main/resources/templates/logare.html
+++ b/src/main/resources/templates/logare.html
@@ -27,14 +27,21 @@
                         <input class="form-control"  type="password" id="password" name="password" placeholder="Parola">
                         <label for="password">Parola</label>
                     </div>
+                    <div class="alert alert-danger" th:if="${param.error}">
+                        Parola sau utilizator gresit.
+                    </div>
+                    <div class="alert alert-info" th:if="${param.logout}">
+                        Ai fost deconectat.
+                    </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary" name="submit"> Logare </button>
+                        <button type="submit" class="btn btn-primary mb-2" name="submit"> Logare </button>
                         <br>
                         <a th:href="@{/inregistrare}"  class="btn btn-primary">Inregistrare</a>
                     </div>
 
                 </form>
             </div>
+
         </div>
 
 </div>
@@ -50,5 +57,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 -->
+
 </body>
 </html>
