--- a/src/main/resources/templates/fragments/toasts.html
+++ b/src/main/resources/templates/fragments/toasts.html
@@ -10,12 +10,32 @@
     <title>Restaurant</title>
 </head>
 <body>
-    <nav th:insert="fragments/defaultNav.html :: nav"></nav>
-    <br/><br/><br/>
+
+<div class="toast-container position-absolute top-0 end-0 p-3 mt-5" th:fragment="toastAdaugat">
+    <div class="toast text-white bg-primary" role="alert" aria-live="assertive" aria-atomic="true" id="liveToast">
+        <div class="d-flex">
+            <div class="toast-body">
+                Produsul a fost adaugat cu succes!
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+
+    </div>
+</div>
+
+<script th:inline="javascript" th:fragment="toastScript">
+    window.onload = (event) => {
+        var arata = [[${reusit}]]
+
+        if (arata) {
+            var toastLiveExample = document.getElementById('liveToast')
+            var toast = new bootstrap.Toast(toastLiveExample)
+            toast.show()
+        }
+    }
+</script>
 
 
-
-<!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
