creare istoric comenzi, oferte

--- a/src/main/resources/templates/fragments/defaultNav.html
+++ b/src/main/resources/templates/fragments/defaultNav.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="comanda">Comanda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cont</a>
+                        <a class="nav-link" href="cont">Cont</a>
                     </li>
 
                 </ul>
