cos de cumparaturi, mai trebuie modificat tabelul pentru comenzi sa nu mai apara in cosul de cumparaturi du finalizare

--- a/src/main/resources/templates/fragments/defaultNav.html
+++ b/src/main/resources/templates/fragments/defaultNav.html
@@ -17,6 +17,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">Acasa</a>
+        <a class="navbar-brand" href="/cosDeCumparaturi">Cos</a>
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Restaurant</h5>
