--- a/src/main/resources/templates/cosDeCumparaturi.html
+++ b/src/main/resources/templates/cosDeCumparaturi.html
@@ -20,7 +20,7 @@
                 <li class="list-group-item d-flex justify-content-between align-items-start" th:each="comanda : ${comenzi}">
                     <div class="ms-2 me-auto">
                         <div class="fw-bold" th:text="${comanda.id_mancare.nume}"></div>
-                         oferta
+                        <div th:text="'x '+${comanda.portii} + ' portii'"></div>
                     </div>
                     <span class="badge bg-primary rounded-pill" th:text="${comanda.pret} + ' lei'"></span>
                 </li>
