--- a/src/main/resources/templates/fragments/defaultNav.html
+++ b/src/main/resources/templates/fragments/defaultNav.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cont">Cont</a>
                     </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link" href="admin">Adauga Oferte</a>
+                    </li>
 
                 </ul>
                 <form class="d-flex">
