--- a/src/main/resources/templates/logare.html
+++ b/src/main/resources/templates/logare.html
@@ -33,6 +33,9 @@
                     <div class="alert alert-info" th:if="${param.logout}">
                         Ai fost deconectat.
                     </div>
+                    <div class="alert alert-info" th:if="${creat}">
+                        Utilizator creat.
+                    </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary mb-2" name="submit"> Logare </button>
                         <br>
